# The-Audio-Hub-

./: .gitignore  DB_Download_Instructions.txt  README.md
Backend/: pyproject.toml  requirements.txt  test_app.db
Backend/src/app/: __about__.py  main.py
Backend/src/app/Backend/: auth.py  category.py  crud.py  database.py  models.py  schemas.py
Backend/src/app/core/: config.py
Backend/tests/: DeleteRequests.postman_collection.json  GetRequests.postman_collection.json  PostRequests.postman_collection.json  PutRequests.postman_collection.json  __init__.py  test_main.py
PSQL_Backend/: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  pytest.ini  requirements.txt
PSQL_Backend/src/app/: main.py
PSQL_Backend/src/app/Backend/: __init__.py  auth.py  crud.py  database.py  models.py  schemas.py
PSQL_Backend/tests/: old_test_main.py  test_main.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/account_page/: page.tsx
frontend/src/app/api/upload-audio/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/file_path_view_all/: page.tsx
frontend/src/app/forgot_password/update-password/: page.tsx
frontend/src/app/forgot_password/verify-user/: page.tsx
frontend/src/app/listening_page/: page.tsx
frontend/src/app/sign_in_sign_up/: page.tsx
frontend/src/app/sign_in_sign_up/sign-in/: page.tsx
frontend/src/app/sign_in_sign_up/sign-up/: page.tsx  page.txt
frontend/src/app/uploading_file_path/: page.tsx
frontend/src/components/: AudioFileList.tsx  ChangePasswordForm.tsx  Footer.tsx  Logo.tsx  NavBar.tsx  PageSelect.tsx  ProfileInfoForm.tsx  SignInForm.tsx  SignUpForm.tsx  ThemeSwitcherButton.tsx  UserButton.tsx  VerifyUserForm.tsx  audio-uploader.tsx  theme-provider.tsx
frontend/src/components/ui/: slider.tsx  tooltip.tsx  use-toast.tsx  use-toastUpload.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts  constants.ts
